--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <header>
-<!--Código del carrusel-->
+<!--Código del carrusel desde bootstrap-->
       <section id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <section class="carousel-inner">
     <section class="carousel-item active" data-bs-interval="10000">
@@ -49,6 +49,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+<!--Cierre del código del carrusel desde bootstrap-->
 
     <p class="titulo-header">Todo para tu jardín, en un solo lugar</p>
     </header>
