--- a/vivero.html
+++ b/vivero.html
@@ -7,7 +7,7 @@
   <title>Vivero | Vivero La Chichy</title>
     <link rel="icon" href="Media/Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="CSS/estilos.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="stylesheet" href="CSS/vivero-grid.css" /
   </head>
 <body>
