commit ultimos cambios

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     <span class="visually-hidden">Next</span>
   </button>
 <!--Cierre del código del carrusel desde bootstrap-->
-
     <p class="titulo-header">Todo para tu jardín, en un solo lugar</p>
     </header>
 
@@ -100,7 +99,6 @@
           deserunt pariatur soluta fugiat labore earum modi quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa incidunt nisi nihil, reiciendis quibusdam laboriosam eum vitae minima asperiores optio repudiandae esse quo enim quas architecto suscipit. Dolore, esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorum dolore quibusdam ab ipsum sunt cupiditate obcaecati autem necessitatibus illum, sed laudantium est a aliquam? Harum atque nisi doloremque perferendis.
         </p>
       </div>
-      
       <div class="Servicios"> 
         <i class='bx bxs-comment-dots icon-serv'></i>
         <h3>Asesoramiento</h3>
@@ -174,7 +172,7 @@
   <article class="boton-inicio"><a href="index.html#Inicio">🔼 Inicio</a></article>
   </section>
 
-  <footer class="navbar" align-items="center"> 
+  <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
