--- a/tienda.html
+++ b/tienda.html
@@ -27,7 +27,7 @@
       </ul>
   </nav>
 
-  <main class="container-fluid">
+  <main class="container-fluid"> <!--contenedor del grid-->
   <section id="Tienda" class="row">
     <h2 class="col col-md-12">Tienda</h2>
   </section>
@@ -108,7 +108,8 @@
     </div>
   </section>
   </main>
-    <footer class="navbar" align-items="center"> 
+
+    <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
