--- a/vivero.html
+++ b/vivero.html
@@ -8,8 +8,9 @@
     <link rel="icon" href="Media/Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="CSS/styles.css" />
-    <link rel="stylesheet" href="CSS/vivero-grid.css" /
-  </head>
+    <link rel="stylesheet" href="CSS/vivero-grid.css"/>
+</head>
+
 <body>
   <nav class="navbar"> <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
@@ -22,12 +23,14 @@
         <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
       </ul>
   </nav>
-  <main class="grid-container">
+
+  <main class="grid-container"> <!--contenedor del grid-->
   <header id="Vivero">
       <h2>Vivero</h2>
   <p>Encontrá todas las variedades de <b>plantas tanto para exterior como interior</b> de tu hogar</p>
   <p class="aviso"><b>IMPORTANTE:</b> Los productos detallados en esta sección no se encuentran disponibles para venta online. Solo se ofrecen para compra presencial en el vivero. Puedes consultar por disponibilidad a través de nuestros canales de contacto.</p>
  </header>
+
   <div id="plantas-de-interior" class="grid-item">
     <h3><b>Plantas de interior</b></h3>
     <ul type="circle">
@@ -44,6 +47,7 @@
         <img class="img-grid" src="media/plantas exterior.jpg" alt="plantas interior">
       </span>
   </div>
+
   <div id="semillas-y-plantines" class="grid-item">
     <h3>Semillas y plantines</h3>
     <p>Si querés hacer tu propia huerta en casa, o querés sumar variedades a la
@@ -72,7 +76,7 @@
     </div>
     </main>
 
-    <footer class="navbar" align-items="center"> 
+    <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
