--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Macetas. Decoración. Herramientas. Fertilizantes. Asesoramiento."/>
     <link rel="icon" href="Media/Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
