--- a/vivero.html
+++ b/vivero.html
@@ -7,8 +7,8 @@
   <title>Vivero | Vivero La Chichy</title>
     <link rel="icon" href="Media/Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/vivero-grid.css"/>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="vivero-grid.css"/>
 </head>
 
 <body>
