--- a/vivero.html
+++ b/vivero.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vivero | Vivero La Chichy</title>
     <link rel="icon" href="Media/Logo.PNG" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="vivero-grid.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/vivero-grid.css"/>
 </head>
 
 <body>
