--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Vivero La Chichy</title>
+      <meta
+      name="description"
+      content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Fertilizantes y otros insumos."/>
   </head>
 
   <body>
