--- a/pages/ecommerce.html
+++ b/pages/ecommerce.html
@@ -10,8 +10,8 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="CSS/ecommerce-bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="ecommerce-bootstrap.css" />
     <title>Tienda Online</title>
   </head>
   <body>
