--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Media/Logo.PNG" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
-  <link rel="stylesheet" href="/css/bootstrap.css"/>
-  <link rel="stylesheet" href="/css/tienda-bootstrap.css"/>
+  <link rel="stylesheet" href="bootstrap.css"/>
+  <link rel="stylesheet" href="tienda-bootstrap.css"/>
   <title>Tienda | Vivero La Chichy</title>
 </head>
 <body>
