--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Macetas. Decoración. Herramientas. Fertilizantes. Asesoramiento."/>
     <link rel="icon" href="Media/Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Vivero La Chichy</title>
       <meta
       name="description"
