--- a/pages/vivero.html
+++ b/pages/vivero.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Media/Logo.PNG" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/vivero-grid.css"/>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="vivero-grid.css"/>
   <title>Vivero | Vivero La Chichy</title>
 </head>
 
