prueba imagenes y fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
     name="description"
     content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Macetas. Decoración. Herramientas. Fertilizantes. Asesoramiento."/>
-    <link rel="icon" href="Media/Logo.PNG" />
+    <link rel="icon" href="Logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css" />
     <title>Vivero La Chichy</title>
@@ -20,7 +20,7 @@
     <nav class="navbar"> <!--Menú de navegación - los links de este navbar dirigen a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
-      <img src="Media/Logo.PNG" width="70" />
+      <img src="Logo.PNG" width="70" />
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
@@ -35,13 +35,13 @@
       <section id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <section class="carousel-inner">
     <section class="carousel-item active" data-bs-interval="10000">
-      <img src="Media/carrusel1.jpeg" class="d-block w-100" alt="...">
+      <img src="carrusel1.jpeg" class="d-block w-100" alt="...">
     </section>
     <section class="carousel-item" data-bs-interval="2000">
-      <img src="Media/carrusel2.jpeg" class="d-block w-100" alt="...">
+      <img src="carrusel2.jpeg" class="d-block w-100" alt="...">
     </section>
     <section class="carousel-item">
-      <img src="Media/carrusel3.jpeg" class="d-block w-100" alt="...">
+      <img src="carrusel3.jpeg" class="d-block w-100" alt="...">
     </section>
   </section>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -168,7 +168,7 @@
     </form>
     <br>
     <span class="contacto-whatsapp">
-      <a href="https://wa.me/00543774442756"><img src="media/logo whatsapp.jpg" alt="logo de whatsapp" width="20"> <b> +5493774442756</b></a>
+      <a href="https://wa.me/00543774442756"><img src="logo whatsapp.jpg" alt="logo de whatsapp" width="20"> <b> +5493774442756</b></a>
     </span>
   </div>
   </article>
