--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
       <h2><a href="vivero.html">Vivero</a></h2>
       <Article>
         <div>
-        <a href="vivero.html#plantas-de-interior"><img src="Media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias"/></a>
+        <a href="vivero.html#plantas-de-interior"><img src="plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias"/></a>
         <h3><a href="vivero.html#plantas-de-interior">Plantas de interior</a></h3>
-        <a href="vivero.html#plantas-de-exterior"><img src="Media/plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias"/></a>
+        <a href="vivero.html#plantas-de-exterior"><img src="plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias"/></a>
         <h3><a href="vivero.html#plantas-de-exterior">Plantas de exterior</a></h3>
       </div>
       <div>
-        <a href="vivero.html#semillas-y-plantines"><img src="Media/semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias"/></a>
+        <a href="vivero.html#semillas-y-plantines"><img src="semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias"/></a>
         <h3><a href="vivero.html#semillas-y-plantines">Semillas y plantines</a></h3>
-        <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="Media/fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias"/></a>
+        <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias"/></a>
         <h3><a href="vivero.html#fertilizantes-y-otro-insumos">Fertilizantes y otros insumos</a></h3>
       </div>
       </Article>
@@ -79,11 +79,11 @@
       <h2><a href="tienda.html">Tienda</a></h2>
       <article>
       <div>
-        <a href="tienda.html#decoracion"><img src="Media/decoracion.jpg" alt="decoracion" class="imagenCategorias" /></a>
+        <a href="tienda.html#decoracion"><img src="decoracion.jpg" alt="decoracion" class="imagenCategorias" /></a>
         <h3><a href="tienda.html#decoracion">Decoración</a></h3>
       </div> 
       <div>
-        <a href="tienda.html#herramientas"><img src="Media/herramientas.jpg" alt="herramientas" class="imagenCategorias"></a>
+        <a href="tienda.html#herramientas"><img src="herramientas.jpg" alt="herramientas" class="imagenCategorias"></a>
         <h3><a href="tienda.html#herramientas">Herramientas</h3></a>
       </div>
       </article>
