--- a/tienda.html
+++ b/tienda.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="Media/Logo.PNG" />
+  <link rel="icon" href="Logo.PNG" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
   <link rel="stylesheet" href="bootstrap.css"/>
   <link rel="stylesheet" href="tienda-bootstrap.css"/>
@@ -14,7 +14,7 @@
 <nav class="navbar"> <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
-      <img src="Media/Logo.PNG" width="70">
+      <img src="Logo.PNG" width="70">
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
@@ -47,38 +47,38 @@
   <section class="row">
    <div class="col col-12 col-md-6">
     <h4>Macetas</h4>
-      <figure> <img src="Media/macetas1.jpg" class="imagenCategorias"> <figcaption>Macetas de cemento</figcaption> </figure>
+      <figure> <img src="macetas1.jpg" class="imagenCategorias"> <figcaption>Macetas de cemento</figcaption> </figure>
    </div>
    <div class="col col-12 col-md-6">
     <h4>Luminarias</h4>
-      <figure><img src="Media/luces indirectas.jpg" class="imagenCategorias"><figcaption>Luces indirectas</figcaption></figure>
+      <figure><img src="luces indirectas.jpg" class="imagenCategorias"><figcaption>Luces indirectas</figcaption></figure>
    </div>
   </section>
 
   <section class="row">
     <div class="col col-12 col-md-6">
-      <figure> <img src="Media/macetas 3.jpg" class="imagenCategorias"> <figcaption>Macetas de terracota</figcaption> </figure>
+      <figure> <img src="macetas 3.jpg" class="imagenCategorias"> <figcaption>Macetas de terracota</figcaption> </figure>
     </div>
     <div class="col col-12 col-md-6">
-      <figure><img src="Media/luces2.jpg" class="imagenCategorias"><figcaption>Luces directas</figcaption></figure>
-    </div>
-  </section>
-
-  <section class="row">
-    <div class="col col-12 col-md-6">
-      <figure> <img src="Media/macetas 4.jpg" class="imagenCategorias"> <figcaption>Macetas de plástico</figcaption> </figure>
-    </div>
-    <div class="col col-12 col-md-6">
-      <figure><img src="Media/luces 1.jpg" class="imagenCategorias"><figcaption>Tiras de luces</figcaption></figure>
+      <figure><img src="luces2.jpg" class="imagenCategorias"><figcaption>Luces directas</figcaption></figure>
     </div>
   </section>
 
   <section class="row">
     <div class="col col-12 col-md-6">
-      <figure> <img src="Media/macetas 5.jpg" class="imagenCategorias"> <figcaption>Macetas impresas en 3D</figcaption> </figure>
+      <figure> <img src="macetas 4.jpg" class="imagenCategorias"> <figcaption>Macetas de plástico</figcaption> </figure>
     </div>
     <div class="col col-12 col-md-6">
-        <figure><img src="Media/antorchas.jpg" class="imagenCategorias"><figcaption>Antorchas</figcaption></figure>
+      <figure><img src="luces 1.jpg" class="imagenCategorias"><figcaption>Tiras de luces</figcaption></figure>
+    </div>
+  </section>
+
+  <section class="row">
+    <div class="col col-12 col-md-6">
+      <figure> <img src="macetas 5.jpg" class="imagenCategorias"> <figcaption>Macetas impresas en 3D</figcaption> </figure>
+    </div>
+    <div class="col col-12 col-md-6">
+        <figure><img src="antorchas.jpg" class="imagenCategorias"><figcaption>Antorchas</figcaption></figure>
     </div>
   </section>
 
@@ -90,18 +90,18 @@
   </section>  
   <section class="row">
     <div class="col col-12 col-md-6">
-      <figure><img src="Media/herramienta1.jpg" class="imagenCategorias"><figcaption>Tijeras de poda</figcaption></figure>
+      <figure><img src="herramienta1.jpg" class="imagenCategorias"><figcaption>Tijeras de poda</figcaption></figure>
     </div>
     <div class="col col-12 col-md-6">
-      <figure><img src="Media/herramientas2.jpg" class="imagenCategorias"><figcaption>Guantes de jardineria</figcaption></figure>
+      <figure><img src="herramientas2.jpg" class="imagenCategorias"><figcaption>Guantes de jardineria</figcaption></figure>
     </div>
   </section>
   <section class="row">
     <div class="col col-12 col-md-6">
-      <figure><img src="Media/palas.jpg" class="imagenCategorias"><figcaption>Palas</figcaption></figure>
+      <figure><img src="palas.jpg" class="imagenCategorias"><figcaption>Palas</figcaption></figure>
     </div>
     <div class="col col-12 col-md-6">
-      <figure><img src="Media/otros jardineria.jpg" class="imagenCategorias"><figcaption>Otros elementos de jardineria</figcaption>
+      <figure><img src="otros jardineria.jpg" class="imagenCategorias"><figcaption>Otros elementos de jardineria</figcaption>
     </div>
   </section>
   </main>
