--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <nav class="navbar" id="Inicio"> <!--Menú de navegación - los links de este navbar dirigen a contenidos internos del index.html vía ID-->
+    <nav class="navbar"> <!--Menú de navegación - los links de este navbar dirigen a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
       <img src="Logo.PNG" width="70" />
@@ -30,7 +30,7 @@
       </ul>
     </nav>
 
-    <header>
+    <header id="Inicio">
 <!--Código del carrusel desde bootstrap-->
       <section id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <section class="carousel-inner">
