--- a/vivero.html
+++ b/vivero.html
@@ -34,7 +34,7 @@
   <div id="plantas-de-interior" class="grid-item">
     <h3><b>Plantas de interior</b></h3>
     <ul type="circle">
-      <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | Ceibo</p>
+      <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
     </ul>
     <img class="img-grid" src="plantas interior.jpg" alt="plantas interior">
   </div>
@@ -58,10 +58,10 @@
         <h4>Semillas</h4>
           <p>Zapallo | Calabaza | Zanahoria | Apio | Puerro | Cebollin</p>
       </span>
-      <br><br>
+      <br>
       <span>
         <h4>Plantines</h4>
-        <p> Lechuga | Rúcula | Mandioca | Verdeo | Papa | Tomate </p>
+        <p> Lechuga | Rúcula | Mandioca | Verdeo | Papa</p>
         </span>
     </div>
 
