--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>Servicios</h2>
       <article>
       <div class="Servicios">
-        <i class='bx bx-landscape icon-serv'></i>
+        <div class="icon-serv"><i class='bx bx-landscape'></i></div>
         <h3>Paisajismo</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi sint in
@@ -103,7 +103,7 @@
         </p>
       </div>
       <div class="Servicios"> 
-        <i class='bx bxs-comment-dots icon-serv'></i>
+        <div class="icon-serv"><i class='bx bxs-comment-dots icon-serv'></i></div>
         <h3>Asesoramiento</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi sint in
