--- a/vivero.html
+++ b/vivero.html
@@ -34,14 +34,14 @@
   <div id="plantas-de-interior" class="grid-item">
     <h3><b>Plantas de interior</b></h3>
     <ul type="circle">
-      <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
+      <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
     </ul>
     <img class="img-grid" src="plantas interior.jpg" alt="plantas interior">
   </div>
   <div id="plantas-de-exterior" class="grid-item">
     <h3><b>Plantas de exterior</b></h3>
       <span>
-          <p>Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon</p>
+          <p>Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon</p>
       </span>
       <span>
         <img class="img-grid" src="plantas exterior.jpg" alt="plantas interior">
@@ -56,12 +56,12 @@
     <br>
       <span>
         <h4>Semillas</h4>
-          <p>Zapallo | Calabaza | Zanahoria | Apio | Puerro | Cebollin</p>
+          <p>Zapallo | Calabaza | Zanahoria | Apio | Puerro | Cebollin | Zapallo | Calabaza | Zanahoria | Apio | Puerro | Cebollin | Zapallo | Calabaza | Zanahoria | Apio | Puerro | Cebollin</p>
       </span>
       <br>
       <span>
         <h4>Plantines</h4>
-        <p> Lechuga | Rúcula | Mandioca | Verdeo | Papa</p>
+        <p> Lechuga | Rúcula | Mandioca | Verdeo | Papa | Lechuga | Rúcula | Mandioca | Verdeo | Papa | Lechuga | Rúcula | Mandioca | Verdeo | Papa | Lechuga | Rúcula | Mandioca | Verdeo | Papa</p>
         </span>
     </div>
 
