--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar"> <!--Menú de navegación - los links de este navbar dirigen a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
-      <img src="Logo.PNG" width="70" />
+      <img src="media/logo.PNG" width="70" />
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
@@ -39,10 +39,10 @@
           <img src="media/carrusel1.jpeg" class="d-block w-100" alt="...">
         </section>
         <section class="carousel-item" data-bs-interval="2000">
-          <img src="..media/carrusel2.jpeg" class="d-block w-100" alt="...">
+          <img src="media/carrusel2.jpeg" class="d-block w-100" alt="...">
         </section>
         <section class="carousel-item">
-          <img src=".media/carrusel3.jpeg" class="d-block w-100" alt="...">
+          <img src="media/carrusel3.jpeg" class="d-block w-100" alt="...">
         </section>
       </section>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -59,18 +59,18 @@
     </header>
 
     <section id="Vivero"> <!-- Primera de las 4 secciones en index.html - Sus links dirigen a la página vivero.html y a IDs dentro de esta página -->
-      <h2><a href="vivero.html">Vivero</a></h2>
+      <h2><a href="pages/ vivero.html">Vivero</a></h2>
       <article>
         <div>
-          <a href="vivero.html#plantas-de-interior"><img src="plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias"/></a>
+          <a href="vivero.html#plantas-de-interior"><img src="media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias"/></a>
           <h3><a href="vivero.html#plantas-de-interior">Plantas de interior</a></h3>
-          <a href="vivero.html#plantas-de-exterior"><img src="plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias"/></a>
+          <a href="vivero.html#plantas-de-exterior"><img src="media/plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias"/></a>
           <h3><a href="vivero.html#plantas-de-exterior">Plantas de exterior</a></h3>
         </div>
         <div>
-          <a href="vivero.html#semillas-y-plantines"><img src="semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias"/></a>
+          <a href="vivero.html#semillas-y-plantines"><img src="media/semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias"/></a>
           <h3><a href="vivero.html#semillas-y-plantines">Semillas y plantines</a></h3>
-          <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias"/></a>
+          <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="media/fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias"/></a>
           <h3><a href="vivero.html#fertilizantes-y-otro-insumos">Fertilizantes y otros insumos</a></h3>
         </div>
       </article>
@@ -81,11 +81,11 @@
       <h2><a href="tienda.html">Tienda</a></h2>
       <article>
         <div>
-          <a href="tienda.html#decoracion"><img src="decoracion.jpg" alt="decoracion" class="imagenCategorias" /></a>
+          <a href="tienda.html#decoracion"><img src="media/decoracion.jpg" alt="decoracion" class="imagenCategorias" /></a>
           <h3><a href="tienda.html#decoracion">Decoración</a></h3>
         </div> 
         <div>
-          <a href="tienda.html#herramientas"><img src="herramientas.jpg" alt="herramientas" class="imagenCategorias"></a>
+          <a href="tienda.html#herramientas"><img src="media/herramientas.jpg" alt="herramientas" class="imagenCategorias"></a>
           <h3><a href="tienda.html#herramientas">Herramientas</h3></a>
         </div>
       </article>
