--- a/vivero.html
+++ b/vivero.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Logo.PNG" />
+    <link rel="icon" href="media/logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="vivero-grid.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/viverogrid.css"/>
     <title>Vivero | Vivero La Chichy</title>
   </head>
 
   <body>
     <nav class="navbar"> <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
-      <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label><img src="Logo.PNG" width="70" />
+      <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label><img src="media/logo.PNG" width="70" />
       <ul>
         <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
         <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
@@ -36,7 +39,7 @@
         <ul type="circle">
           <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
         </ul>
-        <img class="img-grid" src="plantas interior.jpg" alt="plantas interior">
+        <img class="img-grid" src="media/plantas interior.jpg" alt="plantas interior">
       </div>
       <div id="plantas-de-exterior" class="grid-item">
         <h3><b>Plantas de exterior</b></h3>
@@ -44,7 +47,7 @@
             <p>Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon</p>
         </span>
         <span>
-          <img class="img-grid" src="plantas exterior.jpg" alt="plantas interior">
+          <img class="img-grid" src="media/plantas exterior.jpg" alt="plantas interior">
         </span>
       </div>
 
