cambios para entrega 1

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+    content="Ingresá a nuestra tienda online y descubrí nuestra amplia variedad de artículos para tu jardín. Envíos a domicilio a todo el país."/>
+    <meta name="keywords"
+    content="tienda de jardineria, tienda online, ecommerce, Corrientes, Curuzu Cuatia, Macetas, Macetas de cemento, macetas de plástico, macetas de terracota, macetas impresas en 3D, Luminarias, tiras de luces, antorchas, luces directas, luces indirectas, Decoración, Herramientas."/>
     <link rel="icon" href="Media/Logo.PNG" />
     <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="bootstrap.css" />
-    <link rel="stylesheet" href="ecommerce-bootstrap.css" />
-    <title>Tienda Online</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/ecommercebootstrap.css" />
+    <title>La Chichy | eCommerce</title>
   </head>
   <body>
     <nav class="navbar">
