--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
     name="description"
-    content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Macetas. Decoración. Herramientas. Fertilizantes. Asesoramiento."/>
+    content="Todo para tu jardín, en un solo lugar. Vivero y Tienda online. Plantas interior y exterior. Decoración. Macetas. Herramientas. Fertilizantes. Asesoramiento."/>
+    <meta
+    name="keywords"
+    content="Vivero, jardin, tienda de jardineria, tienda online, Corrientes, Curuzu Cuatia, Plantas interior, Pantas exterior, Plantines, Semillas, Macetas, Decoración, Herramientas de jardin, Fertilizantes, Asesoramiento,  Paisajismo."/>
     <link rel="icon" href="media/logo.PNG" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Vivero La Chichy</title>
-      <meta
-      name="description"
-      content="Todo para tu jardín, en un solo lugar. Plantas interior y exterior. Plantines. Semillas. Fertilizantes y otros insumos."/>
+    <title>La Chichy | Vivero y Tienda de Jardinería</title>
   </head>
 
   <body>
@@ -59,7 +59,7 @@
     </header>
 
     <section id="Vivero"> <!-- Primera de las 4 secciones en index.html - Sus links dirigen a la página vivero.html y a IDs dentro de esta página -->
-      <h2><a href="pages/ vivero.html">Vivero</a></h2>
+      <h2><a href="vivero.html">Vivero</a></h2>
       <article>
         <div>
           <a href="vivero.html#plantas-de-interior"><img src="media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias"/></a>
@@ -99,18 +99,22 @@
           <div class="icon-serv"><i class='bx bx-landscape'></i></div>
           <h3>Paisajismo</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi sint in
-            nulla molestiae! In repellat nulla ipsum ea minus quod, ipsam minima
-            deserunt pariatur soluta fugiat labore earum modi quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa incidunt nisi nihil, reiciendis quibusdam laboriosam eum vitae minima asperiores optio repudiandae esse quo enim quas architecto suscipit. Dolore, esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorum dolore quibusdam ab ipsum sunt cupiditate obcaecati autem necessitatibus illum, sed laudantium est a aliquam? Harum atque nisi doloremque perferendis.
+            El servicio de paisajismo profesional se enfoca en el diseño, instalación y mantenimiento de áreas verdes, jardines y paisajes en general. Este servicio es ideal para aquellos que desean mejorar la apariencia de su hogar, negocio o propiedad.
+            <br><br>
+            El proceso comienza con una consulta inicial, en la cual el cliente comparte sus necesidades y preferencias. Al momento de brindar la solución, se tomará en cuenta el clima local, la topografía y el tipo de suelo para crear un diseño que se adapte a las condiciones específicas de la propiedad. Una vez que se ha creado un diseño, nos encargamos de la instalación de las plantas, árboles, arbustos y cualquier otro elemento del paisaje. También es posiblen trabajar en la construcción de patios, caminos y otras características del paisaje que mejoren la funcionalidad del espacio.
+            <br><br>
+            El mantenimiento es una parte clave de este servicio. Esto incluye la poda, fertilización y control de plagas, así como también la limpieza y la eliminación de escombros. El mantenimiento regular ayuda a mantener el aspecto y la salud de las plantas y el paisaje en general.
           </p>
         </div>
         <div class="Servicios"> 
           <div class="icon-serv"><i class='bx bxs-comment-dots icon-serv'></i></div>
           <h3>Asesoramiento</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi sint in
-            nulla molestiae! In repellat nulla ipsum ea minus quod, ipsam minima
-            deserunt pariatur soluta fugiat labore earum modi quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsa incidunt nisi nihil, reiciendis quibusdam laboriosam eum vitae minima asperiores optio repudiandae esse quo enim quas architecto suscipit. Dolore, esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorum dolore quibusdam ab ipsum sunt cupiditate obcaecati autem necessitatibus illum, sed laudantium est a aliquam? Harum atque nisi doloremque perferendis.
+            Brindamos soluciones personalizadas y eficaces para mejorar el rendimiento y la rentabilidad de los cultivos. Asesoramos a agricultores y productores para ayudarlos a optimizar sus prácticas agrícolas y maximizar su producción.
+            <br><br>
+            El proceso comienza con una evaluación detallada de la propiedad y el cultivo, incluyendo el análisis de la calidad del suelo, los niveles de nutrientes y la presencia de plagas o enfermedades. En función de los resultados de la evaluación, desarrollamos un plan personalizado que incluye recomendaciones específicas para la fertilización, el control de plagas y enfermedades, la gestión de riego y cualquier otra necesidad específica del cultivo., lo implementamos y monitoreamos los resultados. Esto puede incluir visitas regulares a la propiedad, análisis del suelo y las plantas, y ajustes necesarios para garantizar el éxito del cultivo.
+            <br><br>
+            Además del asesoramiento en prácticas agrícolas, también ofrecemos asesoramiento en la selección de semillas y variedades de cultivos, el uso de tecnologías agrícolas avanzadas y la planificación de cosechas.
           </p>
         </div>
       </article>
