--- a/vivero.html
+++ b/vivero.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+    name="description"
+    content="Encontrá una amplia variedad de plantas para interior y exterior. Somos distribuidores oficiales de las mejores marcas de fertilizantes e insumos para suelos."/>
+    <meta
+    name="keywords"
+    content="Vivero, jardin, Corrientes, Curuzu Cuatia, Plantas interior, Pantas exterior, Plantines, Semillas, Macetas, Decoración, Fertilizantes, Fertilizantes orgánicos, Fertilizantes inorgánicos."/>
     <link rel="icon" href="media/logo.PNG" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/viverogrid.css"/>
-    <title>Vivero | Vivero La Chichy</title>
+    <title>La Chichy | Vivero</title>
   </head>
 
   <body>
